2006-04-01 CTAF <>
	* zshprompt : cleanup
	* sshep : removed (epita specific)
	* ct-date : bug with day between 01 and 09
	* grepr : remove directory (use current directory)
	* top : 2 windows (cpu and mem)
	* screen : new configuration file for screen
	* ct-installconf : install screen

2006-03-31 CTAF <> -- 0.2.2
	* global : remove ctafconf_login, ctafconf_group : not usefull
	* ct-date : new console date reminder !!
	* global : call ct-date when launching a shell
	* emacs : change directory for doxymacs (doxyemacs => doxymacs)
	* ct-installconf : save previous gconf value (.ctafconf/perso/previous/*-prev-date.gconf
	* ct-save-ctafconf : exclude doxymacs, restore the working directory

2006-03-28 CTAF <>
	* wallpaper : remove some wallpaper (smaller tarball)
	* xsession : user specific stuff moved to xsession.mine
	* emacs : support doxyemacs

2006-03-27 CTAF <> -- 0.2.1
	* ct-installconf : never overwrite .mine file
	* global : all .mine are in .ctafconf/perso
	* ct-installconf : all overwritten file are now saved in .ctafconf/perso/previous
	* ct-save-mine : updated, compress .ctafconf/perso
	* ct-remove-backup : removed, no needed anymore
	* globalenv : add ~/.ctafconf/perso/bin to $PATH
	* vimrc : simple configuration file for vim (coloration, folding, ...)
	* ct-add-wallpaper : bug if .ctafconf/perso/wallpaper doesnt exist
	* ct-installconf : .mine are alwais installed if they don't exist
	* ct-installconf : remove empty file in perso

2006-03-23 CTAF <> -- 0.2.0
	* ct-installconf : defaut interface: conread
	* ct-installconf : gconf setting (gnome-terminal, ...)
	* ct-profile : default for zprompt: ctaf
	* ct-repo : relocate share/repos to perso/repos
	* ct-ssh : relocate share/ssh to perso/ssh
	* global : move all personnal file to .ctafconf/perso
	* global : remove .ctafconf/share (wallpaper, mine goes in etc)
	* emacs : big cleanup
	* emacs : invert C-x b and C-x C-b
	* emacs : recall macro : M-s
	* ct-addwallpaper : add a new wallpaper