@@ -5,7 +5,7 @@
 ## Login   <goctaf@gmail.com>
 ##
 ## Started on  Fri Mar 31 19:54:39 2006 GESTES Cedric
-## Last update Sat Apr  1 15:57:15 2006 GESTES Cedric
+## Last update Wed Apr  5 19:23:26 2006 GESTES Cedric
 ##
 ##use: http://www.intuitive.com/wicked/showscript.cgi?030-agenda.sh
 ##use: http://aplawrence.com/Bofcusm/1455.html
@@ -109,13 +109,17 @@ checkDate()
   format1="$weekday"
   format2="$day$month"
   format3="$day$month$year"
+  format4="$day"
 
   # and step through the file comparing dates...
   ancIFS=$IFS
   IFS="|"	# The reads will naturally split at the IFS
 
   while read date description ; do
-    if [ "$date" = "$format1" -o "$date" = "$format2" -o "$date" = "$format3" ]; then
+      if [ "$date" = "$format1" \
+          -o "$date" = "$format2" \
+          -o "$date" = "$format3" \
+          -o "$date" = "$format4" ]; then
       echo "  - $description"
     fi
   done < $agendafile
@@ -132,13 +136,17 @@ checkevent()
   format1="$weekday"
   format2="$day$month"
   format3="$day$month$year"
+  format4="$day"
 
   # and step through the file comparing dates...
   ancIFS=$IFS
   IFS="|"	# The reads will naturally split at the IFS
 
   while read date description ; do
-      if [ "$date" = "$format1" -o "$date" = "$format2" -o "$date" = "$format3" ]; then
+      if [ "$date" = "$format1" \
+          -o "$date" = "$format2" \
+          -o "$date" = "$format3" \
+          -o "$date" = "$format4" ]; then
           IFS=$ancIFS
           return 1;
       fi
@@ -155,8 +163,12 @@ if [ $# -gt 0 ] && [ x$1 = xadd ]; then
         exit 1
     fi
 
-    echo "Enter the date of event (eg: 12 01, 12 01 1984, or monday)"
-    echo -n "Date of event (day month, day month year, or dayname): "
+    echo "Enter the date of event"
+    echo "Every week   : dayname (sun, mon, tue, wed, thu, fri, sat)"
+    echo "Every Month  : day number (eg 12)"
+    echo "Every Year   : 12 01"
+    echo "Every Century: 12 01 2006"
+    echo -n "Date of event (dayname, day, day month or day month year): "
     read word1 word2 word3 junk
 
     if isDayName $word1 ; then
@@ -165,28 +177,30 @@ if [ $# -gt 0 ] && [ x$1 = xadd ]; then
             exit 1
         fi
         date="$(normalize $word1)"
-
     else
-        if [ -z "$word2" ] ; then
-            echo "Bad dayname format: unknown day name specified" >&2
-            exit 1
-        fi
+        if [ "$word1" -gt 0 -o "$word1" -lt 32 ] && [ -z "$word2" ]; then
+            date=`normanumber $word1`
+        else
+            if [ -z "$word2" ] ; then
+                echo "Bad dayname format: unknown day name specified" >&2
+                exit 1
+            fi
 
         # if [ ! -z "$(echo $word1|sed 's/[[:digit:]]//g')" ]  ; then
 #             echo "Bad date format: please specify day first, by day number" >&2
 #             exit 1
 #         fi
 
-        if [ "$word1" -lt 1 -o "$word1" -gt 31 ] ; then
-            echo "Bad date format: day number can only be in range 1-31" >&2
-            exit 1
-        fi
-        word1=`normanumber $word1`
-        if [ "$word2" -lt 1 -o "$word2" -gt 12 ] ; then
-            echo "Bad date format: month number can only be in range 1-12" >&2
-            exit 1
-        fi
-        word2=`normanumber $word2`
+            if [ "$word1" -lt 1 -o "$word1" -gt 31 ] ; then
+                echo "Bad date format: day number can only be in range 1-31" >&2
+                exit 1
+            fi
+            word1=`normanumber $word1`
+            if [ "$word2" -lt 1 -o "$word2" -gt 12 ] ; then
+                echo "Bad date format: month number can only be in range 1-12" >&2
+                exit 1
+            fi
+            word2=`normanumber $word2`
 #         if ! isMonthName $word2 ; then
 #             echo "Bad date format: unknown month name specified." >&2
 #             exit 1
@@ -194,17 +208,18 @@ if [ $# -gt 0 ] && [ x$1 = xadd ]; then
 
         #word2="$(normalize $word2)"
 
-        if [ -z "$word3" ] ; then
-            date="$word1$word2"
-        else
-            if [ ! -z "$(echo $word3|sed 's/[[:digit:]]//g')" ] ; then
-                echo "Bad date format: third field should be year." >&2
-                exit 1
-            elif [ $word3 -lt 2000 -o $word3 -gt 2500 ] ; then
-                echo "Bad date format: year value should be 2000-2500" >&2
-                exit 1
+            if [ -z "$word3" ] ; then
+                date="$word1$word2"
+            else
+                if [ ! -z "$(echo $word3|sed 's/[[:digit:]]//g')" ] ; then
+                    echo "Bad date format: third field should be year." >&2
+                    exit 1
+                elif [ $word3 -lt 2000 -o $word3 -gt 2500 ] ; then
+                    echo "Bad date format: year value should be 2000-2500" >&2
+                    exit 1
+                fi
+                date="$word1$word2$word3"
             fi
-            date="$word1$word2$word3"
         fi
     fi
     echo -n "One line description: "
